_Source/force-app/main/default/objects/Case/fields/BI_Account__c.field-meta.xml
<CustomField>
    <fullName>BI_Account__c</fullName>
    <formula>Account.Name</formula>
    <label>Account</label>
    <type>Text</type>
</CustomField>