_Source/force-app/main/default/objects/Case/fields/BI_Age__c.field-meta.xml
<CustomField>
    <fullName>BI_Age__c</fullName>
    <formula>IF(NOT(ISNULL (DATEVALUE(ClosedDate))),IF( DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate) &lt;= 0 ,1, DATEVALUE(ClosedDate) - DATEVALUE(CreatedDate)) ,TODAY() - DATEVALUE(CreatedDate))</formula>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>