_Source/force-app/main/default/objects/Case/fields/BI_Area_of_Support__c.field-meta.xml
<CustomField>
    <fullName>BI_Area_of_Support__c</fullName>
    <label>Area of Support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>United Corporate Direct (UCD)</fullName>
            </value>
            <value>
                <fullName>Entertainment</fullName>
            </value>
            <value>
                <fullName>AMEX</fullName>
            </value>
            <value>
                <fullName>Policy &amp; Procedure</fullName>
            </value>
            <value>
                <fullName>Government Sales</fullName>
            </value>
            <value>
                <fullName>Central Sales Support</fullName>
            </value>
            <value>
                <fullName>United Meetings</fullName>
            </value>
            <value>
                <fullName>United PassPlus</fullName>
            </value>
            <value>
                <fullName>Business Insight</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>