_Source/force-app/main/default/objects/Case/fields/BI_Assign_To__c.field-meta.xml
<CustomField>
    <fullName>BI_Assign_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assign To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AssignToCases</relationshipName>
    <type>Lookup</type>
</CustomField>