_Source/force-app/main/default/objects/Case/fields/BI_Auto_Notification_New__c.field-meta.xml
<CustomField>
    <fullName>BI_Auto_Notification_New__c</fullName>
    <defaultValue>If( $RecordType.DeveloperName  = &apos;Post_Travel&apos; || $RecordType.DeveloperName  = &apos;Product&apos;, 
&apos;UA Employee &amp; Customer Contact&apos;,
If($RecordType.DeveloperName = &apos;Pre_Travel&apos; ,
&apos;Customer Contact (External Only)&apos;,
If($RecordType.DeveloperName  = &apos;Business_Insight_Case&apos; || $RecordType.DeveloperName  = &apos;Business_Insight_Case_Release&apos;,
&apos;UA Employee (Internal Only)&apos;,
&apos;None&apos;
)
)
)</defaultValue>
    <label>Auto Notification - New</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Do Not Send</fullName>
            </value>
            <value>
                <fullName>UA Employee (Internal Only)</fullName>
            </value>
            <value>
                <fullName>Customer Contact (External Only)</fullName>
            </value>
            <value>
                <fullName>UA Employee &amp; Customer Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>