_Source/force-app/main/default/objects/Case/fields/BI_box__c.field-meta.xml
<CustomField>
    <fullName>BI_box__c</fullName>
    <label>box</label>
    <length>200</length>
    <type>Text</type>
</CustomField>