_Source/force-app/main/default/objects/Case/fields/BI_Close_Comments__c.field-meta.xml
<CustomField>
    <fullName>BI_Close_Comments__c</fullName>
    <label>Close Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>