_Source/force-app/main/default/objects/Case/fields/BI_Closed_Notification_Sent_Int__c.field-meta.xml
<CustomField>
    <fullName>BI_Closed_Notification_Sent_Int__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed Notification Sent Internal</label>
    <type>Checkbox</type>
</CustomField>