_Source/force-app/main/default/objects/Case/fields/BI_Current_Month_Release__c.field-meta.xml
<CustomField>
    <fullName>BI_Current_Month_Release__c</fullName>
    <formula>IF((MONTH(TODAY()) = MONTH(BI_Planned_Release_Date__c)) &amp;&amp; (YEAR(TODAY()) = YEAR(BI_Planned_Release_Date__c)),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Month&apos;s Release</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>