_Source/force-app/main/default/objects/Case/fields/BI_Functional_Description__c.field-meta.xml
<CustomField>
    <fullName>BI_Functional_Description__c</fullName>
    <label>Functional Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>