_Source/force-app/main/default/objects/Case/fields/BI_In_Progress_Notification_Sent_Ext__c.field-meta.xml
<CustomField>
    <fullName>BI_In_Progress_Notification_Sent_Ext__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Progress Notification Sent External</label>
    <type>Checkbox</type>
</CustomField>