_Source/force-app/main/default/objects/Case/fields/BI_In_Progress_Notification_Sent_Int__c.field-meta.xml
<CustomField>
    <fullName>BI_In_Progress_Notification_Sent_Int__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set this flag to true the first time the case status is set to in progress, and a notification is sent to the user</description>
    <label>In Progress Notification Sent Internal</label>
    <type>Checkbox</type>
</CustomField>