_Source/force-app/main/default/objects/Case/fields/BI_Logged_By__c.field-meta.xml
<CustomField>
    <fullName>BI_Logged_By__c</fullName>
    <formula>if(ISBLANK(ContactId)  &amp;&amp; ISBLANK(BI_User__c) &amp;&amp; !ISBLANK(SuppliedName)  ,
SuppliedName,
if(ISBLANK(ContactId)  &amp;&amp; !ISBLANK(BI_User__c),
 BI_User__r.FirstName  &amp; &quot; &quot; &amp; BI_User__r.LastName,
if(!ISBLANK(ContactId)  &amp;&amp; ISBLANK(BI_User__c),
Contact.FirstName &amp; &quot; &quot; &amp; Contact.LastName ,
if(!ISBLANK(ContactId)  &amp;&amp; !ISBLANK(BI_User__c) &amp;&amp; !ISBLANK(SuppliedName),
SuppliedName,
if(!ISBLANK(ContactId)  &amp;&amp; !ISBLANK(BI_User__c) &amp;&amp; ISBLANK(SuppliedName),
Contact.FirstName &amp; &quot; &quot; &amp; Contact.LastName &amp; &quot; (UA:&quot; &amp; BI_User__r.FirstName &amp; &quot; &quot; &amp; BI_User__r.LastName &amp; &quot;)&quot;,
&quot;UNKNOWN&quot;
)
)
)
)
)</formula>
    <label>Logged By</label>
    <type>Text</type>
</CustomField>