_Source/force-app/main/default/objects/Case/fields/BI_Logged_in_User_Case__c.field-meta.xml
<CustomField>
    <fullName>BI_Logged_in_User_Case__c</fullName>
    <description>Checks if the logged in user is the user for a case so that we can create report and list views based on custom user field</description>
    <formula>IF( BI_User__r.Id  =  $User.Id , 1,0)</formula>
    <label>Logged in User Case</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>