_Source/force-app/main/default/objects/Case/fields/BI_Month_Closed__c.field-meta.xml
<CustomField>
    <fullName>BI_Month_Closed__c</fullName>
    <formula>MONTH( DATEVALUE(ClosedDate ) )</formula>
    <label>Month Closed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>