_Source/force-app/main/default/objects/Case/fields/BI_Month_Opened__c.field-meta.xml
<CustomField>
    <fullName>BI_Month_Opened__c</fullName>
    <formula>MONTH( DATEVALUE(CreatedDate) )</formula>
    <label>Month Opened</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>