_Source/force-app/main/default/objects/Case/fields/BI_New_Notification_Sent_Ext__c.field-meta.xml
<CustomField>
    <fullName>BI_New_Notification_Sent_Ext__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Notification Sent External</label>
    <type>Checkbox</type>
</CustomField>