_Source/force-app/main/default/objects/Case/fields/BI_New_Notification_Sent_Int__c.field-meta.xml
<CustomField>
    <fullName>BI_New_Notification_Sent_Int__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If a user gets an email notification that a new case is logged, this field is set to true in order to prevent subsequent new case notifications for the same case.</description>
    <label>New Notification Sent Internal</label>
    <type>Checkbox</type>
</CustomField>