_Source/force-app/main/default/objects/Case/fields/BI_Next_Month_Release__c.field-meta.xml
<CustomField>
    <fullName>BI_Next_Month_Release__c</fullName>
    <formula>if(((MONTH(TODAY()) = 12) &amp;&amp;
(MONTH(BI_Planned_Release_Date__c) = 1) &amp;&amp;
((YEAR(BI_Planned_Release_Date__c)) = (YEAR(TODAY()) +1))),
1,

if((((MONTH(TODAY()) + 1) = (MONTH(BI_Planned_Release_Date__c))) &amp;&amp;
(YEAR(TODAY()) = YEAR(BI_Planned_Release_Date__c))),
1,
0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Month&apos;s Release</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>