_Source/force-app/main/default/objects/Case/fields/BI_oboAccount__c.field-meta.xml
<CustomField>
    <fullName>BI_oboAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If this case was logged by an Agency on behalf of a corporate customer, select the Corporate Account record that the Agency logged the case for</inlineHelpText>
    <label>Logged on Behalf Of</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Logged by someone else on Behalf Of this Account)</relationshipLabel>
    <relationshipName>oboCases</relationshipName>
    <type>Lookup</type>
</CustomField>