_Source/force-app/main/default/objects/Case/fields/BI_One__c.field-meta.xml
<CustomField>
    <fullName>BI_One__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>One</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>