_Source/force-app/main/default/objects/Case/fields/BI_Owner__c.field-meta.xml
<CustomField>
    <fullName>BI_Owner__c</fullName>
    <formula>IF( ISBLANK(Owner:Queue.QueueName),  Owner:User.FirstName  &amp;  &apos; &apos; &amp;  Owner:User.LastName, Owner:Queue.QueueName )</formula>
    <label>Owner</label>
    <type>Text</type>
</CustomField>