_Source/force-app/main/default/objects/Case/fields/BI_Part_of_Team_Account_Based__c.field-meta.xml
<CustomField>
    <fullName>BI_Part_of_Team_Account_Based__c</fullName>
    <formula>Account.BI_Part_of_my_Team__c</formula>
    <label>Part of Team - Account Based</label>
    <type>Checkbox</type>
</CustomField>