_Source/force-app/main/default/objects/Case/fields/BI_Planned_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>BI_Planned_Release_Date__c</fullName>
    <label>(Planned) Release Date</label>
    <type>Date</type>
</CustomField>