_Source/force-app/main/default/objects/Case/fields/BI_Program_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>BI_Program_Product_Type__c</fullName>
    <label>Program / Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BI_Program_Type</valueSetName>
    </valueSet>
</CustomField>