_Source/force-app/main/default/objects/Case/fields/BI_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>BI_Record_Type__c</fullName>
    <formula>RecordType.Name</formula>
    <label>Record Type</label>
    <type>Text</type>
</CustomField>