_Source/force-app/main/default/objects/Case/fields/BI_Release_Month__c.field-meta.xml
<CustomField>
    <fullName>BI_Release_Month__c</fullName>
    <formula>MONTH( BI_Planned_Release_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Release Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>