_Source/force-app/main/default/objects/Case/fields/BI_Release_Year__c.field-meta.xml
<CustomField>
    <fullName>BI_Release_Year__c</fullName>
    <formula>TEXT(YEAR( BI_Planned_Release_Date__c ))</formula>
    <label>Release Year</label>
    <type>Text</type>
</CustomField>