_Source/force-app/main/default/objects/Case/fields/BI_Subject_Category__c.field-meta.xml
<CustomField>
    <fullName>BI_Subject_Category__c</fullName>
    <label>Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounts and Contacts</fullName>
            </value>
            <value>
                <fullName>Activities</fullName>
            </value>
            <value>
                <fullName>Amenities</fullName>
            </value>
            <value>
                <fullName>AO Support (Airport Support)</fullName>
            </value>
            <value>
                <fullName>Baggage – Delayed</fullName>
            </value>
            <value>
                <fullName>Baggage – General / Other</fullName>
            </value>
            <value>
                <fullName>Baggage – LOB (Lost on Board)</fullName>
            </value>
            <value>
                <fullName>Baggage – Prepaid</fullName>
            </value>
            <value>
                <fullName>Chatter</fullName>
            </value>
            <value>
                <fullName>Corporate Security</fullName>
            </value>
            <value>
                <fullName>Customer Care</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Debit Memo</fullName>
            </value>
            <value>
                <fullName>ER</fullName>
            </value>
            <value>
                <fullName>Jetstream Banking</fullName>
            </value>
            <value>
                <fullName>Login / Password</fullName>
            </value>
            <value>
                <fullName>Memberships</fullName>
            </value>
            <value>
                <fullName>MileagePlus</fullName>
            </value>
            <value>
                <fullName>Mobile Application</fullName>
            </value>
            <value>
                <fullName>NDC – Link</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Outlook Synchronization</fullName>
            </value>
            <value>
                <fullName>Pipeline</fullName>
            </value>
            <value>
                <fullName>PNR – General / Other</fullName>
            </value>
            <value>
                <fullName>PNR – Seats</fullName>
            </value>
            <value>
                <fullName>PNR – Ticketing</fullName>
            </value>
            <value>
                <fullName>PNR – Upgrades</fullName>
            </value>
            <value>
                <fullName>Policy and Procedure</fullName>
            </value>
            <value>
                <fullName>Portal help</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>