_Source/force-app/main/default/objects/Case/fields/BI_Target_Release_Period__c.field-meta.xml
<CustomField>
    <fullName>BI_Target_Release_Period__c</fullName>
    <label>Target Release Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 to 6 Months</fullName>
            </value>
            <value>
                <fullName>6 to 12 Months</fullName>
            </value>
            <value>
                <fullName>Future</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>