_Source/force-app/main/default/objects/Case/fields/BI_User__c.field-meta.xml
<CustomField>
    <fullName>BI_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The person that requested support or submitted the idea</inlineHelpText>
    <label>United Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>