_Source/force-app/main/default/objects/Case/fields/BI_User_Email__c.field-meta.xml
<CustomField>
    <fullName>BI_User_Email__c</fullName>
    <label>User Email</label>
    <type>Email</type>
</CustomField>