_Source/force-app/main/default/objects/Case/fields/BI_User_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>BI_User_Full_Name__c</fullName>
    <formula>BI_User__r.FirstName  &amp; &apos; &apos; &amp; BI_User__r.LastName</formula>
    <label>User Full Name</label>
    <type>Text</type>
</CustomField>