_Source/force-app/main/default/objects/Case/fields/BI_User_Sales_Organization__c.field-meta.xml
<CustomField>
    <fullName>BI_User_Sales_Organization__c</fullName>
    <formula>BI_User__r.User_Region__c</formula>
    <label>User Sales Organization</label>
    <type>Text</type>
</CustomField>