_Source/force-app/main/default/objects/Case/fields/BI_Vanity_Mailbox_Source__c.field-meta.xml
<CustomField>
    <fullName>BI_Vanity_Mailbox_Source__c</fullName>
    <description>If the case was submitted via Email-to-Case, this will be the Vanity mailbox that routed case. This field is populated via the BI_CaseTriggerHandler</description>
    <label>Vanity Mailbox Source</label>
    <type>TextArea</type>
</CustomField>