_Source/force-app/main/default/objects/Case/fields/BI_Week_Closed__c.field-meta.xml
<CustomField>
    <fullName>BI_Week_Closed__c</fullName>
    <formula>MOD(FLOOR( ( DATEVALUE(ClosedDate) - DATEVALUE(&quot;2007-01-01&quot; ))/7),52)-1</formula>
    <label>Week Closed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>