_Source/force-app/main/default/objects/Case/fields/BI_Week_Opened__c.field-meta.xml
<CustomField>
    <fullName>BI_Week_Opened__c</fullName>
    <formula>MOD(FLOOR( ( DATEVALUE(CreatedDate) - DATEVALUE(&quot;2006-01-01&quot; ))/7),52)-1</formula>
    <label>Week Opened</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>