_Source/force-app/main/default/objects/Case/fields/Case_Identified_as_Defect__c.field-meta.xml
<CustomField>
    <fullName>Case_Identified_as_Defect__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please check this box if this needs to be addressed with delivery team.</inlineHelpText>
    <label>Case Identified as Defect?</label>
    <type>Checkbox</type>
</CustomField>