_Source/force-app/main/default/objects/Case/fields/SIP_ARC_IATA_Number__c.field-meta.xml
<CustomField>
    <fullName>SIP_ARC_IATA_Number__c</fullName>
    <label>ARC / IATA Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>