_Source/force-app/main/default/objects/Case/fields/SIP_Browser_Used__c.field-meta.xml
<CustomField>
    <fullName>SIP_Browser_Used__c</fullName>
    <label>Browser Used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Microsoft Internet Explorer</fullName>
            </value>
            <value>
                <fullName>Google Chrome</fullName>
            </value>
            <value>
                <fullName>Firefox</fullName>
            </value>
            <value>
                <fullName>Safari</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>