_Source/force-app/main/default/objects/Case/recordTypes/Business_Insight_Case.recordType-meta.xml
<RecordType>
    <fullName>Business_Insight_Case</fullName>
    <active>true</active>
    <businessProcess>Business Insight Support</businessProcess>
    <label>BI Support Request</label>
</RecordType>