_Source/force-app/main/default/objects/Case/recordTypes/Business_Insight_Case_Release.recordType-meta.xml
<RecordType>
    <fullName>Business_Insight_Case_Release</fullName>
    <active>true</active>
    <businessProcess>Business Insight Release</businessProcess>
    <label>BI Release Request</label>
</RecordType>