_Source/force-app/main/default/objects/Case/recordTypes/Post_Travel.recordType-meta.xml
<RecordType>
    <fullName>Post_Travel</fullName>
    <active>true</active>
    <businessProcess>Post-Travel</businessProcess>
    <label>Post-Travel</label>
</RecordType>