_Source/force-app/main/default/objects/Case/recordTypes/Pre_Travel.recordType-meta.xml
<RecordType>
    <fullName>Pre_Travel</fullName>
    <active>true</active>
    <businessProcess>Pre-Travel</businessProcess>
    <label>Pre-Travel</label>
</RecordType>