_Source/force-app/main/default/objects/Case/recordTypes/Product.recordType-meta.xml
<RecordType>
    <fullName>Product</fullName>
    <active>true</active>
    <businessProcess>Product</businessProcess>
    <label>Product</label>
</RecordType>