_Source/force-app/main/default/objects/Case/recordTypes/SIP_Portal_Feedback.recordType-meta.xml
<RecordType>
    <fullName>SIP_Portal_Feedback</fullName>
    <active>true</active>
    <businessProcess>Beverage Coupon Process</businessProcess>
    <label>Jetstream Case</label>
</RecordType>