_Source/force-app/main/default/objects/Case/validationRules/Closed_Not_Planned_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Not_Planned_Status</fullName>
    <active>true</active>
    <errorConditionFormula>($RecordType.Name = &quot;BI Release Request)&quot; || 
$RecordType.Name = &quot;BI Support Request&quot;)
&amp;&amp;

(CONTAINS(TEXT(Status), &apos;Planned&apos;) || CONTAINS(TEXT(Status), &apos;Resolved&apos;) || CONTAINS(TEXT(Status), &apos;Cancelled&apos;))


&amp;&amp; 

ISBLANK(BI_Close_Comments__c)</errorConditionFormula>
    <errorMessage>If you specify the Case as closed, the Closing Comments are required. TIP - use the &apos;Close Case&apos; action on the &apos;Activities &amp; Chatter&apos; tab to close the case.</errorMessage>
</ValidationRule>