_Source/force-app/main/default/objects/Case/validationRules/Prioritized_for_Next_Release_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Prioritized_for_Next_Release_Status</fullName>
    <active>true</active>
    <errorConditionFormula>($RecordType.Name = &quot;BI Release Request&quot; || 
$RecordType.Name = &quot;BI Support Request&quot;)
&amp;&amp;
CONTAINS(TEXT(Status), &apos;Prioritized&apos;) &amp;&amp; 
(ISBLANK(BI_Planned_Release_Date__c) || 
ISNULL(BI_Planned_Release_Date__c))</errorConditionFormula>
    <errorMessage>If you specify the Status as &apos;Prioritized for Next Release&apos;, the (planned) release date is required. TIP - use the &apos;Release Planning&apos; action on the &apos;Activities &amp; Chatter&apos; tab.</errorMessage>
</ValidationRule>