_Source/force-app/main/default/objects/Case/listViews/Agency_Reports_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Agency_Reports_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Agency Reports Queue</label>
    <queue>Agency_Reports_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>