_Source/force-app/main/default/objects/Case/listViews/AMEX_Queue_Case.listView-meta.xml
<ListView>
    <fullName>AMEX_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>AMEX Queue</label>
    <queue>AMEX_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>