_Source/force-app/main/default/objects/Case/listViews/Beverage_Coupons_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Beverage_Coupons_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Beverage Coupons Queue</label>
    <queue>Beverage_Coupons_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>