_Source/force-app/main/default/objects/Case/listViews/BI_CSST_Unassigned_Open_Cases_Case.listView-meta.xml
<ListView>
    <fullName>BI_CSST_Unassigned_Open_Cases_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Government Queue</label>
    <queue>Government_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>