_Source/force-app/main/default/objects/Case/listViews/BI_Meetings_Unassigned_Open_Cases_Case.listView-meta.xml
<ListView>
    <fullName>BI_Meetings_Unassigned_Open_Cases_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Meetings Queue</label>
    <queue>Meetings_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>