_Source/force-app/main/default/objects/Case/listViews/BI_PassPlus_Unassigned_Open_Cases_Case.listView-meta.xml
<ListView>
    <fullName>BI_PassPlus_Unassigned_Open_Cases_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>PassPlus Queue</label>
    <queue>PassPlus_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>