_Source/force-app/main/default/objects/Case/listViews/BI_Release_Queue_Case.listView-meta.xml
<ListView>
    <fullName>BI_Release_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>BI Release Queue</label>
    <queue>BI_Release_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>