_Source/force-app/main/default/objects/Case/listViews/BI_Support_Queue_Case.listView-meta.xml
<ListView>
    <fullName>BI_Support_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>BI Support Queue</label>
    <queue>BI_Support_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>