_Source/force-app/main/default/objects/Case/listViews/Corporate_Direct_UCD_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Corporate_Direct_UCD_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Corporate Direct (UCD) Queue</label>
    <queue>Corporate_Direct_UCD_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>