_Source/force-app/main/default/objects/Case/listViews/Corporate_Reports_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Corporate_Reports_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Corporate Reports Queue</label>
    <queue>Corporate_Reports_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>