_Source/force-app/main/default/objects/Case/listViews/CSST_Queue_Case.listView-meta.xml
<ListView>
    <fullName>CSST_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>CSST Queue</label>
    <queue>CSST_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>