_Source/force-app/main/default/objects/Case/listViews/Entertainment_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Entertainment_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Entertainment Queue</label>
    <queue>Entertainment_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>