_Source/force-app/main/default/objects/Case/listViews/Feedback_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Feedback_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Feedback Queue</label>
    <queue>Feedback_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>