_Source/force-app/main/default/objects/Case/listViews/Government_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Government_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Government Queue</label>
    <queue>Government_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>