_Source/force-app/main/default/objects/Case/listViews/Login_and_Password_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Login_and_Password_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Login and Password Queue</label>
    <queue>Login_and_Password_Queue</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>